kibana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-ing
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: kibana.hello-world.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 443
